<resources>
    <string name="app_name">Run Tracker</string>

    <string name="search">Search</string>
    <string name="signOut">Logout</string>

    <string name="screen_settings">Settings</string>
    <string name="screen_register_new_runner">Registration</string>
    <string name="screen_runners_results">Results</string>
    <string name="screen_runner">Runner Information</string>
    <string name="screen_scan_qr_code">Scan QR code</string>
    <string name="screen_race_list">Race list</string>
    <string name="screen_distance_statistic">Distance statistic</string>

    <string name="menu_item_edit_race">Edit current race</string>

    <string name="tab_runner_result">Runners</string>
    <string name="tab_iron_runner_result">Iron</string>

    <string name="toast_exit_app_warning_text">Click again to exit</string>
    <string name="button_start_run_tracker">Start the race</string>
    <string name="checkpoint_for_iron_people">CP for iron people</string>
    <string name="checkpoint_for_people">CP for runners</string>
    <string name="select_your_checkpoint">Indicate which CP you are on</string>
    <string name="date_of_start">Start date: %1$s</string>
    <string name="scan_card">Scan the card</string>
    <string name="button_add">Save</string>
    <string name="runner_number">Member Number</string>
    <string name="iron">iron</string>
    <string name="runner">runner</string>
    <string name="city">City </string>
    <string name="date_of_birthday">Date of birth</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="full_name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="team_name">Team Name</string>
    <string name="mark_at_current_checkpoint">Mark on current CP</string>
    <string name="fill_in_required_fields">Fill in required fields!</string>
    <string name="card">Card %1$s</string>
    <string name="save_new_race">Save race</string>


    <string name="error_member_already_exist">A runner with such a card already exists</string>
    <string name="error_sync_with_server">Sync with server error</string>
    <string name="error_save_data_to_local_db">Save data to local database error</string>
    <string name="error_runner_not_found">Runner not found</string>
    <string name="attention">Attention!</string>
    <string name ="remove_checkpoint_for_runner">Do you want to clear the current CP?</string>
    <string name="mark_runner_without_card">Mark runner on CP without card?</string>
    <string name="total_time">Total time: %1$s</string>
    <string name="off_track">Off track</string>
    <string name="alert_confirm_offtrack_runner">Are you sure off-track runner?</string>

    <string name="link_card">Link nfc card</string>
    <string name="ok" translatable="false">OK</string>
    <string name="success">Success</string>
    <string name="success_message">Checkpoint %1$s added to runner %2$s</string>
    <string name="nfc_disabled">NFC disabled!</string>
    <string name="nfc_disabled_full_message">NFC scanner disabled! Some features will not work!</string>
    <string name="is_enable_nfc">Enable NFC to scan runners cards?</string>
    <string name="please_enable_nfc">Please activate NFC and click Back to return to the app!</string>
    <string name="device_offline">Device offline</string>

    <string name="select_checkpoint">Select checkpoint</string>


    <string name="disable_link_card_mode">Disable link card moder</string>
    <string name="please_scan_card">"Please scan card "</string>


    <string name="cd_distance_image" translatable="false">RunnersHeaderPhoto</string>
    <string name="user_name_hint">Username</string>
    <string name="password_hint">Password</string>

    <string name="signIn">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="competition_time">Time: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="def_new_checkpoint_name">no name</string>
    <string name="current_checkpoint">Current checkpoint:</string>
    <string name="finishers">Finishers</string>

    <string name="invalid_version">Version invalid. Please install actual or contact with the developer</string>

</resources>