<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_result"
        android:icon="@drawable/ic_results"
        android:title="@string/signOut"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/screen_settings"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_select_race"
        android:icon="@drawable/ic_settings"
        android:title="@string/screen_race_list"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_edit_race"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_item_edit_race"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>