<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.runners.RunnersFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:id="@+id/tvInfo"
        style="@style/TextM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"
        android:text="@string/select_your_checkpoint"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvCheckpointForRunners"
        style="@style/TextM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"
        android:text="@string/checkpoint_for_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo" />

    <Spinner
        android:id="@+id/spinnerForRunners"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_bg"
        android:dropDownWidth="wrap_content"
        android:entries="@array/checkpoints_full_name"
        android:popupBackground="@color/colorPrimary"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla"
        app:layout_constraintBottom_toBottomOf="@+id/tvCheckpointForRunners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/tvCheckpointForIronPeople"
        app:layout_constraintTop_toTopOf="@+id/tvCheckpointForRunners"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/tvCheckpointForIronPeople"
        style="@style/TextM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"
        android:text="@string/checkpoint_for_iron_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCheckpointForRunners" />

    <Spinner
        android:id="@+id/spinnerForIronPeople"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_bg"
        android:dropDownWidth="wrap_content"
        android:entries="@array/checkpoints_full_name"
        android:popupBackground="@color/colorPrimary"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla"
        app:layout_constraintBottom_toBottomOf="@+id/tvCheckpointForIronPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/tvCheckpointForIronPeople"
        app:layout_constraintTop_toTopOf="@+id/tvCheckpointForIronPeople"
        app:layout_constraintWidth_percent="0.3" />


    <TextView
        android:id="@+id/tvDateOfStart"
        style="@style/TextM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"
        android:layout_marginStart="68dp"
        android:layout_marginTop="152dp"
        android:text="@string/date_of_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCheckpointForIronPeople" />

    <Button
        android:id="@+id/tvSignOut"
        style="@style/MainButton"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_m"
        android:text="@string/signOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvStartRunning"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tvStartRunning"
        style="@style/MainButton"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_m"
        android:text="@string/button_start_run_tracker"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSignOut" />

</androidx.constraintlayout.widget.ConstraintLayout>